Added pipe for visualizing scalar and vector fields with glyphs.

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -66,6 +66,8 @@ SET(PROJECT_SRCS
   
   medPipeVectorField.cpp
   medPipeVectorField.h
+  medPipeVectorFieldMapWithArrows.cpp
+  medPipeVectorFieldMapWithArrows.h
   medPipeVectorFieldGlyphs.cpp
   medPipeVectorFieldGlyphs.h
   medPipeVectorFieldSurface.cpp
