Test suite for medOpInteractiveClipSurface.

--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -164,6 +164,9 @@ ADD_TEST(medOpFillHolesTest ${EXECUTABLE_OUTPUT_PATH}/medOpFillHolesTest)
 ADD_EXECUTABLE(medOpImporterVTKXMLTest  medOpImporterVTKXMLTest.h medOpImporterVTKXMLTest.cpp)
 ADD_TEST(medOpImporterVTKXMLTest ${EXECUTABLE_OUTPUT_PATH}/medOpImporterVTKXMLTest)
 
+ADD_EXECUTABLE(medOpInteractiveClipSurfaceTest  medOpInteractiveClipSurfaceTest.h medOpInteractiveClipSurfaceTest.cpp)
+ADD_TEST(medOpInteractiveClipSurfaceTest ${EXECUTABLE_OUTPUT_PATH}/medOpInteractiveClipSurfaceTest)
+
 
 # wxWidgets specific classes
 #IF (MAF_USE_WX)
