--- a/Testing/Gui/CMakeLists.txt
+++ b/Testing/Gui/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT (MedicalGui_TEST)
 
-LINK_LIBRARIES(medGui)
+LINK_LIBRARIES(medGui mafCore)
 
 #-----------------------------------------------------------------------------
 # tests using cppunit testing framework
@@ -11,3 +11,6 @@ ADD_TEST(medGUISettingsAdvancedTest ${EXECUTABLE_OUTPUT_PATH}/medGUISettingsAdva
 
 ADD_EXECUTABLE(medGUIDicomSettingsTest medGUIDicomSettingsTest.h medGUIDicomSettingsTest.cpp)
 ADD_TEST(medGUIDicomSettingsTest ${EXECUTABLE_OUTPUT_PATH}/medGUIDicomSettingsTest)
+
+ADD_EXECUTABLE(medGUIWizardTest medGUIWizardTest.h medGUIWizardTest.cpp)
+ADD_TEST(medGUIWizardTest ${EXECUTABLE_OUTPUT_PATH}/medGUIWizardTest)
