--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -176,6 +176,9 @@ ADD_TEST(medOpCreateEditSkeletonTest ${EXECUTABLE_OUTPUT_PATH}/medOpCreateEditSk
 ADD_EXECUTABLE(medOpRegisterClustersTest  medOpRegisterClustersTest.h medOpRegisterClustersTest.cpp)
 ADD_TEST(medOpRegisterClustersTest ${EXECUTABLE_OUTPUT_PATH}/medOpRegisterClustersTest)
 
+ADD_EXECUTABLE(medOpClassicICPRegistrationTest  medOpClassicICPRegistrationTest.h medOpClassicICPRegistrationTest.cpp)
+ADD_TEST(medOpClassicICPRegistrationTest ${EXECUTABLE_OUTPUT_PATH}/medOpClassicICPRegistrationTest)
+
 ADD_EXECUTABLE(medOpMML3ParameterViewTest  medOpMML3ParameterViewTest.h medOpMML3ParameterViewTest.cpp)
 ADD_TEST(medOpMML3ParameterViewTest ${EXECUTABLE_OUTPUT_PATH}/medOpMML3ParameterViewTest)
 
