Added vtkMAFCellLocator and other vtk files needed for the inertial tensor computation.

--- a/vtkMED/CMakeLists.txt
+++ b/vtkMED/CMakeLists.txt
@@ -38,8 +38,14 @@ SET(vtkMED_SRCS
   vtkMEDRegionGrowingLocalGlobalThreshold.h
   vtkMEDFixTopology.cxx
   vtkMEDFixTopology.h
-	vtkMEDPoissonSurfaceReconstruction.cxx
+  vtkMEDPoissonSurfaceReconstruction.cxx
   vtkMEDPoissonSurfaceReconstruction.h
+  vtkMAFCellLocator.cxx
+  vtkMAFCellLocator.h
+  vtkBoundingBox.cxx
+  vtkBoundingBox.h
+  vtkBox.cxx
+  vtkBox.h
   
   ########## Should be committed down ###########
   vtkMAFVolumeRayCastMapper.cxx
