Add test suite for medOpIterativeRegistration class http://mingle.b3c.it/projects/b3c_software/cards/1998

--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -185,6 +185,9 @@ ADD_TEST(medOpMML3ParameterViewTest ${EXECUTABLE_OUTPUT_PATH}/medOpMML3Parameter
 ADD_EXECUTABLE(medOpInteractionDebuggerTest  medOpInteractionDebuggerTest.h medOpInteractionDebuggerTest.cpp)
 ADD_TEST(medOpInteractionDebuggerTest ${EXECUTABLE_OUTPUT_PATH}/medOpInteractionDebuggerTest)
 
+ADD_EXECUTABLE(medOpIterativeRegistrationTest  medOpIterativeRegistrationTest.h medOpIterativeRegistrationTest.cpp)
+ADD_TEST(medOpIterativeRegistrationTest ${EXECUTABLE_OUTPUT_PATH}/medOpIterativeRegistrationTest)
+
 # wxWidgets specific classes
 #IF (MAF_USE_WX)
 #ENDIF (MAF_USE_WX)
