add binarynode test, remove symmetric sparse matrix (unused and bugged class)

--- a/vtkMED/Testing/CMakeLists.txt
+++ b/vtkMED/Testing/CMakeLists.txt
@@ -139,8 +139,8 @@ ADD_TEST(TriangulationTest ${EXECUTABLE_OUTPUT_PATH}/TriangulationTest)
 ADD_EXECUTABLE(AllocatorTest AllocatorTest.h AllocatorTest.cpp)
 ADD_TEST(AllocatorTest ${EXECUTABLE_OUTPUT_PATH}/AllocatorTest)
 
-ADD_EXECUTABLE(SparseSymmetricMatrixTest SparseSymmetricMatrixTest.h SparseSymmetricMatrixTest.cpp)
-ADD_TEST(SparseSymmetricMatrixTest ${EXECUTABLE_OUTPUT_PATH}/SparseSymmetricMatrixTest)
+ADD_EXECUTABLE(BinaryNodeTest BinaryNodeTest.h BinaryNodeTest.cpp)
+ADD_TEST(BinaryNodeTest ${EXECUTABLE_OUTPUT_PATH}/BinaryNodeTest)
 
 
 # wxWidgets specific classes
